--- a/Html/index.css
+++ b/Html/index.css
@@ -1,1 +1,29 @@
-img { float:left; }
+body{
+    font-family: sans-serif;
+    background: #e8e8e8;
+}
+
+.menu ul a :hover{
+    color: grey;
+}
+
+.menu ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+.menu li {
+    display: inline;
+    margin-right: 20px;
+}
+
+.menu a {
+    text-decoration: none;
+    color: #333;
+}
+
+.info li{
+    display: inline-block;
+    text-align: center;
+}
